--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf
@@ -195,8 +195,8 @@ http {
     debug_is_open_print bool= false;
     #linux 是否打开零复制sendfile
     is_open_sendfile bool= false;
-    tcp_conf_name str = "";
-    quic_conf_name str = "";
+    tcp_config_name str = "";
+    quic_config_name str = "";
     is_proxy_protocol_hello bool = false;
     is_open_ebpf bool = false;
     is_disable_share_http_context bool = false;
