--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
@@ -27,23 +27,40 @@ common {
 }
 
 socket {
+    tcp raw = r```
+        [[tcp]]
+            #配置名字，可以根据名字来引用配置
+            tcp_config_name = "tcp_config_ebpf"
+            #发送buffer，为0不设置
+            tcp_send_buffer = 16777216   #default 0  unset
+            #接收buffer，为0不设置
+            tcp_recv_buffer = 873800 #default 0  unset
+            #是否不延迟
+            tcp_nodelay = true #default true
+            #发送超时时间，为0不超时
+            tcp_send_timeout = 60  #default 60
+            #接收超时时间，为0不超时
+            tcp_recv_timeout = 60  #default 60
+            #connect超时时间，为0不超时
+            tcp_connect_timeout = 60  #default 10
+    ```r;
 }
 
 include  str = ./anyproxy_edge_to_proxy_upstream.conf;
 
 http {
-    debug_is_open_stream_work_times bool = true;
+    debug_is_open_stream_work_times bool = false;
     access raw = r```
         #如果没有配置就继承父类的配置
         [[access]]
             #default true
-            access_log = true
+            access_log = false
             #default "./logs/access.log"
             access_log_file = "./logs/access.log"
             #default
             access_format = "[${local_time}] ${total_read_size} ${total_write_size} ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} [${stream_work_times}]"
             #default false
-            access_log_stdout = true
+            access_log_stdout = false
     ```r;
 
 
@@ -58,6 +75,9 @@ http {
 
 #tcp
     server {
+        stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:20005"
@@ -68,6 +88,9 @@ http {
     }
 #tcptunnel
     server {
+        stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:20006"
