--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy_ebpf.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy_ebpf.conf
@@ -2,8 +2,7 @@
 #curl http://www.example.cn:20501 -k -v
     server {
         #ebpf需要增大缓冲区
-        #echo 167772160 > /proc/sys/net/core/rmem_max
-        #echo 167772160 > /proc/sys/net/core/wmem_max
+        tcp_config_name str = "tcp_config_ebpf";
         is_open_ebpf linux_bool = true;
         is_port_direct_ebpf linux_bool = true;
         domain str = "www.example.cn";
@@ -18,9 +17,9 @@
 #curl http://www.example.cn:20502 -k -v
     server {
         #ebpf需要增大缓冲区
-        #echo 167772160 > /proc/sys/net/core/rmem_max
-        #echo 167772160 > /proc/sys/net/core/wmem_max
+        tcp_config_name str = "tcp_config_ebpf";
         is_open_ebpf linux_bool = true;
+        is_port_direct_ebpf linux_bool = false;
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
            address = "0.0.0.0:20502"
