--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy_upstream.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy_upstream.conf
@@ -455,6 +455,7 @@ upstream {
         #负载均衡 weight round_robin random ip_hash ip_hash_active fair
         balancer str = random;
         proxy_pass_tcp raw = r```
+            tcp_config_name = "tcp_config_ebpf"
             address = "www.upstream.cn:10501"
             is_proxy_protocol_hello = false
         ```r;
@@ -539,7 +540,7 @@ upstream {
 
         proxy_pass_tcp raw = r```
             address = "www.upstream.cn:10006"
-            is_proxy_protocol_hello = true
+            is_proxy_protocol_hello = false
         ```r;
     }
 }
