--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
@@ -27,6 +27,23 @@ common {
 }
 
 socket {
+    tcp raw = r```
+        [[tcp]]
+            #配置名字，可以根据名字来引用配置
+            tcp_config_name = "tcp_config_ebpf"
+            #发送buffer，为0不设置
+            tcp_send_buffer = 16777216   #default 0  unset
+            #接收buffer，为0不设置
+            tcp_recv_buffer = 873800 #default 0  unset
+            #是否不延迟
+            tcp_nodelay = true #default true
+            #发送超时时间，为0不超时
+            tcp_send_timeout = 60  #default 60
+            #接收超时时间，为0不超时
+            tcp_recv_timeout = 60  #default 60
+            #connect超时时间，为0不超时
+            tcp_connect_timeout = 60  #default 10
+    ```r;
 }
 
 upstream {
@@ -36,6 +53,17 @@ upstream {
         #负载均衡 weight round_robin random ip_hash ip_hash_active fair
         balancer str = random;
         proxy_pass_tcp raw = r```
+            address = "www.upstream.cn:19090"
+        ```r;
+    }
+
+    server {
+        #配置名字，可以根据名字来引用配置
+        name str = upstream_tcp_http_ebpf;
+        #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+        balancer str = random;
+        proxy_pass_tcp raw = r```
+            tcp_config_name = "tcp_config_ebpf"
             address = "www.upstream.cn:19090"
         ```r;
     }
@@ -106,18 +134,18 @@ upstream {
 }
 
 http {
-    debug_is_open_stream_work_times bool = true;
+    #debug_is_open_stream_work_times bool = true;
     access raw = r```
         #如果没有配置就继承父类的配置
         [[access]]
             #default true
-            access_log = true
+            access_log = false
             #default "./logs/access.log"
             access_log_file = "./logs/access.log"
             #default
             access_format = "[${local_time}] ${total_read_size} ${total_write_size} ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} [${stream_work_times}]"
             #default false
-            access_log_stdout = true
+            access_log_stdout = false
     ```r;
 
 #upstream1
@@ -344,13 +372,31 @@ curl -vk -H "host:www.example.cn" -H "Upgrade: websocket" -H "Sec-WebSocket-Vers
 #http->tcp, tcp->http
 #curl http://www.example.cn:10501 -k -v
     server {
+        #debug_is_open_stream_work_times bool = true;
+        tcp_config_name str = "tcp_config_ebpf";
         is_open_ebpf linux_bool = true;
         is_port_direct_ebpf linux_bool = true;
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:10501"
         ```r;
-        proxy_pass_upstream str = "upstream_tcp_http";
+        proxy_pass_upstream str = "upstream_tcp_http_ebpf";
+        local {
+        }
+    }
+#upstream11_1
+#http->tcp, tcp->http
+#curl http://www.example.cn:10502 -k -v
+    server {
+        #debug_is_open_stream_work_times bool = true;
+        tcp_config_name str = "tcp_config_ebpf";
+        is_open_ebpf linux_bool = true;
+        is_port_direct_ebpf linux_bool = false;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:10502"
+        ```r;
+        proxy_pass_upstream str = "upstream_tcp_http_ebpf";
         local {
         }
     }
@@ -381,9 +427,21 @@ curl -vk -H "host:www.example.cn" -H "Upgrade: websocket" -H "Sec-WebSocket-Vers
 #http->tcp, tcp->http
 #curl http://www.example.cn:10006 -k -v
     server {
+        stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:10006"
+        ```r;
+        proxy_pass_upstream str = "upstream_tcp_http";
+        local {
+        }
+    }
+    server {
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:10007"
         ```r;
         proxy_pass_upstream str = "upstream_tcp_http";
         local {
