--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,8 @@ ab.log
 vmlinux.h
 any-proxy/examples/anyproxy/examples/anyproxy.exe
 any-proxy/examples/anyproxy/examples/anyproxy
+any-proxy/examples/anyproxy/examples/tokio_proxy.exe
+any-proxy/examples/anyproxy/examples/tokio_proxy
 .output
+*.tmp
+*.err
