--- a/any-tunnel2/Cargo.toml
+++ b/any-tunnel2/Cargo.toml
@@ -6,6 +6,36 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 
+[profile.dev]
+debug = true
+panic = "unwind"
+incremental = true
+strip = false
+#opt-level = 0
+#split-debuginfo = '...'  # Platform-specific.
+#debug-assertions = true
+#overflow-checks = true
+#lto = false
+#codegen-units = 256
+#rpath = false
+
+[profile.release]
+debug = false
+panic = "abort"
+opt-level = 3
+#这个特性开起来会导致rpm打包失败， deb正常
+lto = true
+codegen-units = 1
+incremental = false
+rpath = false
+debug-assertions = false
+overflow-checks = false
+#性能调试用这个
+#debug = true
+#删除调试信息
+strip = true
+
+
 [features]
 default = ["anyack", "anyruntime-tokio-spawn"]
 anydebug-error = ["anydebug", "anyerror"]
@@ -18,16 +48,16 @@ anyruntime-tokio-spawn =[]
 [dependencies]
 any-base = {path = "../any-base"}
 anyhow = {path = "../anyhow"}
-tokio = { version = "1.24.1", features = ["full"] }
+tokio = { version = "1.35.1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4.19"
 futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
 lazy_static = "1.4.0"
 log = "0.4.14"
 libc = "0.2.109"
-toml = "0.5.8"
-log4rs = "1.0.0"
-bytes = "1.1.0"
+toml = "0.5.10"
+log4rs = "1.2.0"
+bytes = "1.5.0"
 async-trait = "0.1.52"
 hashbrown = "0.11.2"
 async-channel = "1.8.0"
