--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf
@@ -46,7 +46,7 @@ socket {
     tcp raw = r```
         [[tcp]]
             #配置名字，可以根据名字来引用配置
-            tcp_name = "tcp_config1" #default tcp_config1
+            tcp_config_name = "tcp_config_default" #default tcp_config_default
             #发送buffer，为0不设置
             tcp_send_buffer = 0   #default 0  unset
             #接收buffer，为0不设置
@@ -58,18 +58,18 @@ socket {
             #接收超时时间，为0不超时
             tcp_recv_timeout = 60  #default 60
             #connect超时时间，为0不超时
-            tcp_connect_timeout = 60  #default 10
+            tcp_connect_timeout = 60  #default 60
     ```r;
     quic raw = r```
         [[quic]]
             #配置名字，可以根据名字来引用配置
-            quic_name = "quic_config1" #default quic_config1
+            quic_config_name = "quic_config_default" #default quic_config_default
             #发送超时时间，为0不超时
             quic_send_timeout = 60  #default 60
             #接收超时时间，为0不超时
             quic_recv_timeout = 60  #default 60
             #connect超时时间，为0不超时
-            quic_connect_timeout = 60  #default 10
+            quic_connect_timeout = 60  #default 60
             #绑定端口,支持配置多端口"10001-10009,10010,10011,10012,10100-10110"
             quic_upstream_ports = "" #default 不绑定固定端口， 使用的时候随机获取端口
 
@@ -202,17 +202,21 @@ http {
     is_disable_share_http_context bool = false;
     read_buffer_size usize = 2;
     is_port_direct_ebpf bool = false;
+    client_timeout_mil_time_ebpf u64 = 120000;
+    upstream_timeout_mil_time_ebpf u64 = 2000;
+    close_type str = "fast";
     access raw = r```
         #如果没有配置就继承父类的配置
         [[access]]
             #default true
-            access_log = false
+            access_log = true
             #default "./logs/access.log"
             access_log_file = "./logs/access.log"
             #default
-            access_format = "[${local_time}] ${total_read_size} ${total_write_size} ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} [${stream_work_times}]"
+            access_format = "[${local_time}] ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} ${client_protocol_hello_size} ${upstream_protocol_hello_size} [${stream_work_times}]"
             #default false
             access_log_stdout = false
+            is_err_access_log = true
     ```r;
     server {
         domain str = "www.example.cn";
