--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
@@ -34,7 +34,7 @@ socket {
             #发送buffer，为0不设置
             tcp_send_buffer = 16777216   #default 0  unset
             #接收buffer，为0不设置
-            tcp_recv_buffer = 873800 #default 0  unset
+            tcp_recv_buffer = 0 #default 0  unset
             #是否不延迟
             tcp_nodelay = true #default true
             #发送超时时间，为0不超时
@@ -42,7 +42,32 @@ socket {
             #接收超时时间，为0不超时
             tcp_recv_timeout = 60  #default 60
             #connect超时时间，为0不超时
-            tcp_connect_timeout = 60  #default 10
+            tcp_connect_timeout = 60  #default 60
+    ```r;
+    quic raw = r```
+        [[quic]]
+            #配置名字，可以根据名字来引用配置
+            quic_config_name = "quic_config_default" #default quic_config_default
+            #发送超时时间，为0不超时
+            quic_send_timeout = 60  #default 60
+            #接收超时时间，为0不超时
+            quic_recv_timeout = 60  #default 60
+            #connect超时时间，为0不超时
+            quic_connect_timeout = 60  #default 60
+            #绑定端口,支持配置多端口"10001-10009,10010,10011,10012,10100-10110"
+            quic_upstream_ports = "10001-10101" #default 不绑定固定端口， 使用的时候随机获取端口
+
+            #quinn提供的配置值
+            quic_default = true #default true   如果是true下面配置不生效
+            quic_upstream_streams = 100 #default 100
+            quic_send_window = 8 #default8
+            quic_rtt = 100 #default 100
+            quic_max_stream_bandwidth = 12500 #default 12500
+            quic_enable_keylog = false #default false
+            quic_protocols = "ALPN" #default "ALPN"
+            quic_datagram_send_buffer_size = 1048576 #default 1024 * 1024
+            quic_recv_buffer_size = 10485760 #default 10485760
+            quic_send_buffer_size = 10485760 #default 10485760
     ```r;
 }
 
@@ -54,17 +79,19 @@ http {
         #如果没有配置就继承父类的配置
         [[access]]
             #default true
-            access_log = false
+            access_log = true
             #default "./logs/access.log"
             access_log_file = "./logs/access.log"
             #default
-            access_format = "[${local_time}] ${total_read_size} ${total_write_size} ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} [${stream_work_times}]"
+            access_format = "[${local_time}] ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} ${client_protocol_hello_size} ${upstream_protocol_hello_size} [${stream_work_times}]"
             #default false
-            access_log_stdout = false
+            access_log_stdout = true
+            is_err_access_log = true
     ```r;
 
 
     include  = ./anyproxy_edge_to_proxy_10m.conf;
+    include  = ./anyproxy_edge_to_proxy_10m_tunnel.conf;
     include  = ./anyproxy_edge_to_proxy_limit.conf;
     include  = ./anyproxy_edge_to_proxy_sendfile.conf;
     include  = ./anyproxy_edge_to_proxy_sendfilelimit.conf;
@@ -73,7 +100,8 @@ http {
     include  = ./anyproxy_edge_to_proxy_ebpf.conf;
     include  = ./anyproxy_edge_to_proxy_http.conf;
 
-#tcp
+
+#tcptunnel
     server {
         stream_cache_size  usize = 131072;
         is_upload_open_stream_cache bool = true;
@@ -82,12 +110,15 @@ http {
         port_listen_tcp raw = r```
             address = "0.0.0.0:20005"
         ```r;
-        proxy_pass_upstream str = "upstream15";
+        proxy_pass_upstream str = "upstream14";
         local {
         }
     }
-#tcptunnel
+
+#tcp
     server {
+        #close_type str = "shutdown";
+        #close_type str = "fast";
         stream_cache_size  usize = 131072;
         is_upload_open_stream_cache bool = true;
         is_download_open_stream_cache bool = true;
@@ -95,10 +126,73 @@ http {
         port_listen_tcp raw = r```
             address = "0.0.0.0:20006"
         ```r;
-        proxy_pass_upstream str = "upstream14";
+        proxy_pass_upstream str = "upstream15";
         local {
         }
     }
+
+
+
+    #ssltunnel
+        server {
+            stream_cache_size  usize = 131072;
+            is_upload_open_stream_cache bool = true;
+            is_download_open_stream_cache bool = true;
+            domain str = "www.example.cn";
+            port_listen_tcp raw = r```
+                address = "0.0.0.0:20007"
+            ```r;
+            proxy_pass_upstream str = "upstream16";
+            local {
+            }
+        }
+
+    #ssl
+        server {
+            #close_type str = "shutdown";
+            #close_type str = "fast";
+            stream_cache_size  usize = 131072;
+            is_upload_open_stream_cache bool = true;
+            is_download_open_stream_cache bool = true;
+            domain str = "www.example.cn";
+            port_listen_tcp raw = r```
+                address = "0.0.0.0:20008"
+            ```r;
+            proxy_pass_upstream str = "upstream17";
+            local {
+            }
+        }
+
+
+        #quictunnel
+            server {
+                stream_cache_size  usize = 131072;
+                is_upload_open_stream_cache bool = true;
+                is_download_open_stream_cache bool = true;
+                domain str = "www.example.cn";
+                port_listen_tcp raw = r```
+                    address = "0.0.0.0:20009"
+                ```r;
+                proxy_pass_upstream str = "upstream18";
+                local {
+                }
+            }
+
+        #quic
+            server {
+                #close_type str = "shutdown";
+                #close_type str = "fast";
+                stream_cache_size  usize = 131072;
+                is_upload_open_stream_cache bool = true;
+                is_download_open_stream_cache bool = true;
+                domain str = "www.example.cn";
+                port_listen_tcp raw = r```
+                    address = "0.0.0.0:20010"
+                ```r;
+                proxy_pass_upstream str = "upstream19";
+                local {
+                }
+            }
 
 r###
 curl -vk -H "host:www.example.cn" -H "Upgrade: websocket" -H "Sec-WebSocket-Version: 13" -H "Sec-WebSocket-Key:13" -H "Connection: Upgrade" http://www.example.cn:20401
