--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy_ebpf.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy_ebpf.conf
@@ -24,7 +24,7 @@
         port_listen_tcp raw = r```
            address = "0.0.0.0:20502"
         ```r;
-        proxy_pass_upstream str = "upstream11";
+        proxy_pass_upstream str = "upstream11_1";
         local {
         }
     }
