--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy_upstream.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy_upstream.conf
@@ -19,6 +19,14 @@ upstream {
             address = "www.upstream.cn:10011"
             is_proxy_protocol_hello = true
         ```r;
+    }
+
+    server {
+        #配置名字，可以根据名字来引用配置
+        name str = upstream1_tunnel;
+        #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+        balancer str = random;
+
         proxy_pass_tunnel_tcp raw = r```
             tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
             address = "www.upstream.cn:10001"
@@ -462,6 +470,17 @@ upstream {
     }
     server {
         #配置名字，可以根据名字来引用配置
+        name str = upstream11_1;
+        #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+        balancer str = random;
+        proxy_pass_tcp raw = r```
+            tcp_config_name = "tcp_config_ebpf"
+            address = "www.upstream.cn:10502"
+            is_proxy_protocol_hello = false
+        ```r;
+    }
+    server {
+        #配置名字，可以根据名字来引用配置
         name str = upstream12;
         #负载均衡 weight round_robin random ip_hash ip_hash_active fair
         balancer str = random;
@@ -530,6 +549,13 @@ upstream {
             #dynamic_domain = {interval = 10}
             is_proxy_protocol_hello = true
         ```r;
+        proxy_pass_tunnel_tcp raw = r```
+            tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+            address = "www.upstream.cn:10007"
+            #heartbeat = {interval = 10, timeout = 10, fail = 3}
+            #dynamic_domain = {interval = 10}
+            is_proxy_protocol_hello = true
+        ```r;
     }
 
     server {
@@ -542,5 +568,94 @@ upstream {
             address = "www.upstream.cn:10006"
             is_proxy_protocol_hello = false
         ```r;
+        proxy_pass_tcp raw = r```
+            address = "www.upstream.cn:10007"
+            is_proxy_protocol_hello = false
+        ```r;
     }
+
+    server {
+        #配置名字，可以根据名字来引用配置
+        name str = upstream16;
+        #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+        balancer str = random;
+
+        proxy_pass_tunnel_ssl raw = r```
+            tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10016"
+            #heartbeat = {interval = 10, timeout = 10, fail = 3}
+            #dynamic_domain = {interval = 10}
+            is_proxy_protocol_hello = true
+        ```r;
+        proxy_pass_tunnel_ssl raw = r```
+            tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10017"
+            #heartbeat = {interval = 10, timeout = 10, fail = 3}
+            #dynamic_domain = {interval = 10}
+            is_proxy_protocol_hello = true
+        ```r;
+    }
+
+    server {
+        #配置名字，可以根据名字来引用配置
+        name str = upstream17;
+        #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+        balancer str = random;
+
+        proxy_pass_ssl raw = r```
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10016"
+            is_proxy_protocol_hello = false
+        ```r;
+        proxy_pass_ssl raw = r```
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10017"
+            is_proxy_protocol_hello = false
+        ```r;
+    }
+
+    server {
+        #配置名字，可以根据名字来引用配置
+        name str = upstream18;
+        #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+        balancer str = random;
+
+        proxy_pass_tunnel_quic raw = r```
+            tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10006"
+            #heartbeat = {interval = 10, timeout = 10, fail = 3}
+            #dynamic_domain = {interval = 10}
+            is_proxy_protocol_hello = true
+        ```r;
+        proxy_pass_tunnel_quic raw = r```
+            tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10007"
+            #heartbeat = {interval = 10, timeout = 10, fail = 3}
+            #dynamic_domain = {interval = 10}
+            is_proxy_protocol_hello = true
+        ```r;
+    }
+
+    server {
+        #配置名字，可以根据名字来引用配置
+        name str = upstream19;
+        #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+        balancer str = random;
+
+        proxy_pass_quic raw = r```
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10006"
+            is_proxy_protocol_hello = false
+        ```r;
+        proxy_pass_quic raw = r```
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10007"
+            is_proxy_protocol_hello = false
+        ```r;
+    }
+
 }
