--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy_10m_tunnel.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy_10m_tunnel.conf
@@ -2,9 +2,9 @@
     server {
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
-            address = "0.0.0.0:20031"
+            address = "0.0.0.0:20032"
         ```r;
-        proxy_pass_upstream str = "upstream1";
+        proxy_pass_upstream str = "upstream1_tunnel";
         local {
         }
     }
@@ -14,21 +14,9 @@
         is_download_open_stream_cache bool = true;
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
-            address = "0.0.0.0:20033"
+            address = "0.0.0.0:20034"
         ```r;
-        proxy_pass_upstream str = "upstream1";
-        local {
-        }
-    }
-    server {
-        stream_cache_size  usize = 131072;
-        is_upload_open_stream_cache bool = true;
-        is_download_open_stream_cache bool = true;
-        domain str = "www.example.cn";
-        port_listen_tcp raw = r```
-            address = "0.0.0.0:20035"
-        ```r;
-        proxy_pass_upstream str = "upstream1";
+        proxy_pass_upstream str = "upstream1_tunnel";
         local {
         }
     }
@@ -40,9 +28,9 @@
         upload_tmp_file_size  u64= 10240000; #default 0
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
-            address = "0.0.0.0:20037"
+            address = "0.0.0.0:20036"
         ```r;
-        proxy_pass_upstream str = "upstream1";
+        proxy_pass_upstream str = "upstream1_tunnel";
         local {
         }
     }
@@ -55,9 +43,9 @@
         is_open_sendfile linux_bool= true;
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
-            address = "0.0.0.0:20039"
+            address = "0.0.0.0:20038"
         ```r;
-        proxy_pass_upstream str = "upstream1";
+        proxy_pass_upstream str = "upstream1_tunnel";
         local {
         }
     }
