--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
@@ -34,7 +34,7 @@ socket {
             #发送buffer，为0不设置
             tcp_send_buffer = 16777216   #default 0  unset
             #接收buffer，为0不设置
-            tcp_recv_buffer = 873800 #default 0  unset
+            tcp_recv_buffer = 0 #default 0  unset
             #是否不延迟
             tcp_nodelay = true #default true
             #发送超时时间，为0不超时
@@ -42,7 +42,32 @@ socket {
             #接收超时时间，为0不超时
             tcp_recv_timeout = 60  #default 60
             #connect超时时间，为0不超时
-            tcp_connect_timeout = 60  #default 10
+            tcp_connect_timeout = 60  #default 60
+    ```r;
+    quic raw = r```
+        [[quic]]
+            #配置名字，可以根据名字来引用配置
+            quic_config_name = "quic_config_default" #default quic_config_default
+            #发送超时时间，为0不超时
+            quic_send_timeout = 60  #default 60
+            #接收超时时间，为0不超时
+            quic_recv_timeout = 60  #default 60
+            #connect超时时间，为0不超时
+            quic_connect_timeout = 60  #default 60
+            #绑定端口,支持配置多端口"10001-10009,10010,10011,10012,10100-10110"
+            quic_upstream_ports = "11001-11101" #default 不绑定固定端口， 使用的时候随机获取端口
+
+            #quinn提供的配置值
+            quic_default = true #default true   如果是true下面配置不生效
+            quic_upstream_streams = 100 #default 100
+            quic_send_window = 8 #default8
+            quic_rtt = 100 #default 100
+            quic_max_stream_bandwidth = 12500 #default 12500
+            quic_enable_keylog = false #default false
+            quic_protocols = "ALPN" #default "ALPN"
+            quic_datagram_send_buffer_size = 1048576 #default 1024 * 1024
+            quic_recv_buffer_size = 10485760 #default 10485760
+            quic_send_buffer_size = 10485760 #default 10485760
     ```r;
 }
 
@@ -139,13 +164,14 @@ http {
         #如果没有配置就继承父类的配置
         [[access]]
             #default true
-            access_log = false
+            access_log = true
             #default "./logs/access.log"
             access_log_file = "./logs/access.log"
             #default
-            access_format = "[${local_time}] ${total_read_size} ${total_write_size} ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} [${stream_work_times}]"
+            access_format = "[${local_time}] ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} ${client_protocol_hello_size} ${upstream_protocol_hello_size} [${stream_work_times}]"
             #default false
-            access_log_stdout = false
+            access_log_stdout = true
+            is_err_access_log = true
     ```r;
 
 #upstream1
@@ -434,6 +460,14 @@ curl -vk -H "host:www.example.cn" -H "Upgrade: websocket" -H "Sec-WebSocket-Vers
         port_listen_tcp raw = r```
             address = "0.0.0.0:10006"
         ```r;
+        port_listen_ssl raw = r```
+            address = "0.0.0.0:10016"
+            ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem", ssl_domain = "www.example.cn"}
+        ```r;
+        port_listen_quic raw = r```
+            address = "0.0.0.0:10006"
+            ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem", ssl_domain = "www.example.cn"}
+        ```r;
         proxy_pass_upstream str = "upstream_tcp_http";
         local {
         }
@@ -442,6 +476,14 @@ curl -vk -H "host:www.example.cn" -H "Upgrade: websocket" -H "Sec-WebSocket-Vers
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:10007"
+        ```r;
+        port_listen_ssl raw = r```
+            address = "0.0.0.0:10017"
+            ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem", ssl_domain = "www.example.cn"}
+        ```r;
+        port_listen_quic raw = r```
+            address = "0.0.0.0:10007"
+            ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem", ssl_domain = "www.example.cn"}
         ```r;
         proxy_pass_upstream str = "upstream_tcp_http";
         local {
